@@ -22,10 +22,12 @@ import scala.reflect.ClassTag
 import org.apache.spark.SparkContext._
 import org.apache.mahout.math.scalabindings._
 import RLikeOps._
-import org.apache.mahout.math.{Matrix, Vector}
+import org.apache.mahout.math.{SequentialAccessSparseVector, Matrix, Vector}
 import org.apache.mahout.math.drm.logical.{OpAewScalar, OpAewB}
 import org.apache.log4j.Logger
 import org.apache.mahout.sparkbindings.blas.AewB.{ReduceFuncScalar, ReduceFunc}
+import org.apache.mahout.sparkbindings.{BlockifiedDrmRdd, DrmRdd, drm}
+import org.apache.mahout.math.drm._
 
 /** Elementwise drm-drm operators */
 object AewB {
@@ -52,6 +54,7 @@ object AewB {
 
     val ewOps = getEWOps()
     val opId = op.op
+    val ncol = op.ncol
 
     val reduceFunc = opId match {
       case "+" => ewOps.plus
@@ -83,14 +86,24 @@ object AewB {
       log.debug("applying elementwise as join")
 
       a
+          // Full outer-join operands row-wise
           .cogroup(b, numPartitions = a.partitions.size max b.partitions.size)
+
+          // Reduce both sides. In case there are duplicate rows in RHS or LHS, they are summed up
+          // prior to reduction.
           .map({
         case (key, (vectorSeqA, vectorSeqB)) =>
-          key -> reduceFunc(vectorSeqA.reduce(reduceFunc), vectorSeqB.reduce(reduceFunc))
+          val lhsVec: Vector = if (vectorSeqA.isEmpty) new SequentialAccessSparseVector(ncol)
+          else
+            (vectorSeqA.head /: vectorSeqA.tail)(_ += _)
+          val rhsVec: Vector = if (vectorSeqB.isEmpty) new SequentialAccessSparseVector(ncol)
+          else
+            (vectorSeqB.head /: vectorSeqB.tail)(_ += _)
+          key -> reduceFunc(lhsVec, rhsVec)
       })
     }
 
-    new DrmRddInput(rowWiseSrc = Some(op.ncol -> rdd))
+    new DrmRddInput(rowWiseSrc = Some(ncol -> rdd))
   }
 
   /** Physical algorithm to handle matrix-scalar operators like A - s or s -: A */
@@ -109,11 +122,21 @@ object AewB {
       case "/:" => ewOps.scalarDiv
       case default => throw new IllegalArgumentException("Unsupported elementwise operator:%s.".format(opId))
     }
-    val a = srcA.toBlockifiedDrmRdd()
-    val rdd = a
+
+    // Before obtaining blockified rdd, see if we have to fix int row key consistency so that missing 
+    // rows can get lazily pre-populated with empty vectors before proceeding with elementwise scalar.
+    val aBlockRdd = if (implicitly[ClassTag[K]] == ClassTag.Int && op.A.canHaveMissingRows) {
+      val fixedRdd = fixIntConsistency(op.A.asInstanceOf[DrmLike[Int]], src = srcA.toDrmRdd().asInstanceOf[DrmRdd[Int]])
+      drm.blockify(fixedRdd, blockncol = op.A.ncol).asInstanceOf[BlockifiedDrmRdd[K]]
+    } else {
+      srcA.toBlockifiedDrmRdd()
+    }
+
+    val rdd = aBlockRdd
         .map({
       case (keys, block) => keys -> reduceFunc(block, scalar)
     })
+
     new DrmRddInput[K](blockifiedSrc = Some(rdd))
   }
 }
