@@ -31,17 +31,36 @@ import org.apache.mahout.math.drm._
 import org.apache.mahout.sparkbindings._
 import org.apache.spark.SparkContext._
 
-/** Spark-specific optimizer-checkpointed DRM. */
+/** ==Spark-specific optimizer-checkpointed DRM.==
+  *
+  * @param rdd underlying rdd to wrap over.
+  * @param _nrow number of rows; if unspecified, we will compute with an inexpensive traversal.
+  * @param _ncol number of columns; if unspecified, we will try to guess with an inexpensive traversal.
+  * @param _cacheStorageLevel storage level
+  * @param partitioningTag unique partitioning tag. Used to detect identically partitioned operands.
+  * @param _canHaveMissingRows true if the matrix is int-keyed, and if it also may have missing rows
+  *                            (will require a lazy fix for some physical operations.
+  * @param evidence$1 class tag context bound for K.
+  * @tparam K matrix key type (e.g. the keys of sequence files once persisted)
+  */
 class CheckpointedDrmSpark[K: ClassTag](
     val rdd: DrmRdd[K],
     private var _nrow: Long = -1L,
     private var _ncol: Int = -1,
     private val _cacheStorageLevel: StorageLevel = StorageLevel.MEMORY_ONLY,
-    override protected[mahout] val partitioningTag: Long = Random.nextLong()
+    override protected[mahout] val partitioningTag: Long = Random.nextLong(),
+    private var _canHaveMissingRows: Boolean = false
     ) extends CheckpointedDrm[K] {
 
   lazy val nrow = if (_nrow >= 0) _nrow else computeNRow
   lazy val ncol = if (_ncol >= 0) _ncol else computeNCol
+  lazy val canHaveMissingRows: Boolean = {
+    nrow
+    _canHaveMissingRows
+  }
+
+  //  private[mahout] var canHaveMissingRows = false
+  private[mahout] var intFixExtra: Long = 0L
 
   private var cached: Boolean = false
   override val context: DistributedContext = rdd.context
@@ -69,7 +88,7 @@ class CheckpointedDrmSpark[K: ClassTag](
    * if matrix was previously persisted into cache,
    * delete cached representation
    */
-  def uncache() = {
+  def uncache(): this.type = {
     if (cached) {
       rdd.unpersist(blocking = false)
       cached = false
@@ -77,7 +96,7 @@ class CheckpointedDrmSpark[K: ClassTag](
     this
   }
 
-//  def mapRows(mapfun: (K, Vector) => Vector): CheckpointedDrmSpark[K] =
+  //  def mapRows(mapfun: (K, Vector) => Vector): CheckpointedDrmSpark[K] =
 //    new CheckpointedDrmSpark[K](rdd.map(t => (t._1, mapfun(t._1, t._2))))
 
 
@@ -151,11 +170,24 @@ class CheckpointedDrmSpark[K: ClassTag](
 
     val intRowIndex = classTag[K] == classTag[Int]
 
-    if (intRowIndex)
-      cache().rdd.map(_._1.asInstanceOf[Int]).fold(-1)(max(_, _)) + 1L
-    else
+    if (intRowIndex) {
+      val rdd = cache().rdd.asInstanceOf[DrmRdd[Int]]
+
+      // I guess it is a suitable place to compute int keys consistency test here because we know
+      // that nrow can be computed lazily, which always happens when rdd is already available, cached,
+      // and it's ok to compute small summaries without triggering huge pipelines. Which usually
+      // happens right after things like drmFromHDFS or drmWrap().
+      val maxPlus1 = rdd.map(_._1.asInstanceOf[Int]).fold(-1)(max(_, _)) + 1L
+      val rowCount = rdd.count()
+      _canHaveMissingRows = maxPlus1 != rowCount ||
+        rdd.map(_._1).sum().toLong != ((rowCount -1.0 ) * (rowCount -2.0) /2.0).toLong
+      intFixExtra = (maxPlus1 - rowCount) max 0L
+      maxPlus1
+    } else
       cache().rdd.count()
   }
+
+
 
   protected def computeNCol =
     cache().rdd.map(_._2.length).fold(-1)(max(_, _))
